--- a/src/components/ThemeController.astro
+++ b/src/components/ThemeController.astro
@@ -49,6 +49,7 @@
   }
 
   function switchTheme(doc, newTheme) {
+
     doc.querySelector("html").setAttribute("data-theme", newTheme);
 
     window.localStorage.setItem("data-theme", newTheme);
@@ -67,6 +68,7 @@
   }
 
   function changeThemeBehavior(doc) {
+
     let theme_controller;
     // Get theme-controller element base on media query
     if (window.screen.width < 768) {
@@ -87,9 +89,9 @@
     setTheme(ev.newDocument);
   });
 
-  document.addEventListener("astro:after-swap", () =>
-    changeThemeBehavior(document)
-  );
+  document.addEventListener("astro:after-swap", () => {
+    changeThemeBehavior(document);
+  } );
 
   // Add event listener to swap theme when window is resized
   window.addEventListener("resize", () => {
