--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,9 @@ import { Image } from "astro:assets";
 import sep  from "../assets/sep.svg";
 ---
 <Layout urlMenuItem="/home">
-    <div class="flex justify-center">
-        <section class="max-w-screen-lg w-full mt-10 flex flex-col gap-4 lg:grid lg: lg:grid-cols-4">
-            <div class="flex justify-center lg:grid lg:order-last lg:justify-end lg:items-center">
+    <div class="flex justify-center flex-col">
+        <section class="max-w-screen-lg w-full my-10 flex flex-col gap-4 lg:grid lg: lg:grid-cols-4">
+            <div class="flex md:justify-center lg:grid lg:order-last lg:justify-end lg:items-center animate-fade-left max-sm:animate-fade-right">
                 <Image src="/yo.webp"
                     height=175
                     width=175
@@ -15,20 +15,20 @@ import sep  from "../assets/sep.svg";
                     class="rounded-full" />
             </div>
             <div class="mb-2 md:flex md:items-center md:flex-col lg:grid-cols-subgrid lg:col-span-1 lg:col-span-2 lg:col-span-3 lg:items-start"> 
-                <h1 class="prose dark:prose-invert text-2xl md:text-3xl font-bold mb-3">
+                <h1 class="prose dark:prose-invert text-2xl md:text-3xl font-bold mb-3 animate-fade-left lg:animate-fade-right">
                     Hola, mi nombre es
                     <span class="text-4xl md:text-5xl text-primary block">Luis Palacios</span>
                 </h1>
 
-                <div class="mb-6 flex gap-4 items-center">
+                <div class="mb-6 flex gap-4 items-center animate-fade-left lg:animate-fade-right">
                     <p class="prose dark:prose-invert text-xl md:text-2xl font-bold inline text-accent">Desarrollador Full Stack </p>
                     <Icon name="ecu"size={25}/>
                 </div>
 
-                <article class="prose dark:prose-invert md:prose-lg lg:prose-xl mb-6">               
+                <article class="prose dark:prose-invert md:prose-lg lg:prose-xl mb-6 animate-fade lg:animate-fade-right">               
                     <p>Me dedico profesionalmente al desarrollo de software más de 4 años especializado en el sector financiero 👨🏻‍💻. Mi último trabajo fue como Ingeniero de desarrollo en el Banco del Austro. 💼 Actualmente trabajo en AustroRed. También realizo proyectos como Freelancer. 📚 Me gusta leer libros sobre educación financiera y emprendimiento. 👨🏻‍🏫 Me gusta trabajar en equipo, ayudar a los demás y mi principal valor es el respeto.</p>
                 </article>
-                <div class="flex flex-row gap-16 md:items-center md:justify-center">
+                <div class="flex flex-row gap-16 md:items-center md:justify-center animate-fade lg:animate-fade-right">
                     <a class="hover:text-primary" href="https://www.linkedin.com/in/palaciosluismig/" target="_blank" >
                         <Icon name="social_networks/github"size={30}/>
                     </a>
@@ -37,8 +37,17 @@ import sep  from "../assets/sep.svg";
                     </a>
                     <a class="hover:text-primary" href="https://www.linkedin.com/in/palaciosluismig/" target="_blank" >
                         <Icon name="social_networks/instagram"size={30}/>
-                    </a>
+                    </a>    
                 </div>
+            </div>
+        </section>
+
+        <!-- Experience -->
+        <section>
+            <div>
+                <h1 class="prose dark:prose-invert text-2xl md:text-3xl font-bold mb-3 animate-fade-left lg:animate-fade-right">
+                    Experiencia
+                </h1>
             </div>
         </section>
 
