Index agregar sección de experiencia :)

--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -9,7 +9,7 @@ const { urlMenuItem } = Astro.props;
 ---
 
 <div
-  class = "sticky pt-4 shadow-sm lg:shadow-none lg:backdrop-blur-none lg:bg-opacity-100 z-30 flex h-auto w-full justify-center backdrop-blur transition-all duration-100 bg-base-100 text-base-content"
+  class = "p-5 sticky pt-4 shadow-sm lg:shadow-none lg:backdrop-blur-none lg:bg-opacity-100 z-30 flex h-auto w-full justify-center backdrop-blur transition-all duration-100 bg-base-100 text-base-content"
 >
   <div class="navbar max-w-screen-lg p-0">
     <div class="navbar-start w-1/5">
