--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const {
 ---
 
 <!doctype html>
-<html lang="es" data-theme="fantasy">
+<html lang="es" data-theme="fantasy" class="">
   <head>
     <BaseHead
       title={title}
@@ -26,7 +26,7 @@ const {
     />
     {TRANSITION_API && <ViewTransitions />}
   </head>
-  <body class="p-5">
+  <body>
 	<NavBar title={SITE_TITLE} urlMenuItem={urlMenuItem} />
 	<main class="">
 		<div class="">
