--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,20 +8,24 @@ import mastermoto from "../assets/job_logos/mastermoto.png";
 import { getCollection } from "astro:content";
 import createSlug from "../lib/create_slug";
 import Card from "../components/Card.astro";
+import Technologies from "../components/Technologies.astro"
+
+import { TECH_STACK } from "../config";
 
 const projects = (await getCollection("projects"))
   .filter((p) => p.data.important === true)
   .sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf())
   .slice(0, 3);
 
+const categories = Array.from(new Set(TECH_STACK.map(item => item.category)));
+
+
 ---
 
 <Layout urlMenuItem="/home">
   <div class="flex justify-center flex-col px-5 pb-20 items-center">
     <!-- Presentation -->
-    <section
-      class="max-w-screen-lg w-full my-10 flex flex-col gap-4 lg:grid lg:grid-cols-4 mb-12"
-    >
+    <section class="max-w-screen-lg w-full my-10 flex flex-col gap-4 lg:grid lg:grid-cols-4 mb-12" >
       <div
         class="flex md:justify-center lg:grid lg:order-last lg:justify-end lg:items-center animate-fade-left max-sm:animate-fade-right"
       >
@@ -252,7 +256,7 @@ const projects = (await getCollection("projects"))
     <section class="max-w-screen-lg w-full mb-12">
       <div class="text-3xl w-full font-bold mb-2">
         <h2 class="prose dark:prose-invert text-xl md:text-2xl lg:text-3xl font-bold text-primary mb-6 flex flex-row items-center">
-          <Icon name="projects" class="mr-2"/>Projectos como Freelancer
+          <Icon name="projects" class="mr-2"/>Proyectos como Freelancer
         </h2>
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
@@ -266,25 +270,50 @@ const projects = (await getCollection("projects"))
               badge={project.data.badge}
               url={"/projects/" + createSlug(project.data.title, project.slug)}
               target="_self"
-              tags={project.data.tags}
               github={project.data.github}
               website={project.data.website}
+              skills={project.data.skills}
               />
           ))
           }
         </div>
         
-        
-
         <!-- Button: show all projects -->
-        <div class="col-span-full md:flex md:justify-end">
-        <a href="/projects" class="btn btn-outline w-full md:w-auto">
-            All projects
+        <div class="col-span-full md:flex md:justify-center">
+          <a href="/projects" class="btn btn-outline btn-primary w-full md:w-auto">
             <Icon name="projects" class="inline-block ml-2" size={22} />
-        </a>
+              Más proyectos
+          </a>
         </div>
     </div>
     </section>
 
+    <!-- Skills -->
+    <section class="max-w-screen-lg w-full mb-12">
+      <div class="text-3xl w-full font-bold mb-2">
+        <h2 class="prose dark:prose-invert text-xl md:text-2xl lg:text-3xl font-bold text-primary mb-6 flex flex-row items-center">
+          <Icon name="bug" class="mr-2"/>Tecnologías
+        </h2>
+
+        <h3 class="prose dark:prose-invert text-lg md:text-xl lg:text-2xl font-semibold text-primary mb-6 flex flex-row content-center justify-center max-w-none">
+          Front-end
+        </h3>
+
+        <div class="grid grid-cols-4 md:grid-cols-5 gap-4">
+        {
+          TECH_STACK.map((skill) => {
+            if (skill.category === 'Front-end') {
+              return (
+                <div class="flex flex-col items-center gap-2">
+                  <Icon name={`tech_skills/${skill.logo}`} class="h-8 md:h-10 lg:h-16 animate-wiggle animate-infinite animate-duration-[1000ms] animate-ease-in-out" size={100}/> 
+                  <p class="prose text-sm font-normal">{skill.name}</p>
+                </div>
+              );
+            }
+            })
+        }
+        </div>
+      </div>
+    </section>
   </div>
 </Layout>
