--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -9,7 +9,7 @@ const { urlMenuItem } = Astro.props;
 ---
 
 <div
-  class = "p-5 sticky pt-4 shadow-sm lg:shadow-none lg:backdrop-blur-none lg:bg-opacity-100 z-30 flex h-auto w-full justify-center backdrop-blur transition-all duration-100 bg-base-100 text-base-content"
+  class = "p-5 sticky top-0 pt-4 shadow-sm lg:shadow-none lg:backdrop-blur-none lg:bg-opacity-100 z-30 flex h-auto w-full justify-center bg-opacity-90 backdrop-blur transition-all duration-100 bg-base-100 text-base-content"
 >
   <div class="navbar max-w-screen-lg p-0">
     <div class="navbar-start w-1/5">
@@ -29,7 +29,7 @@ const { urlMenuItem } = Astro.props;
         MENU_ITEMS.map((item) => (
           <li
             class:list={[
-              "max-xl:tooltip max-xl:tooltip-primary",
+              "max-lg:tooltip max-lg:tooltip-primary",
               {
                 "max-sm:tooltip-bottom max-xl:tooltip-left":
                   item.tooltip === "left",
@@ -60,7 +60,7 @@ const { urlMenuItem } = Astro.props;
     </ul>
     <div class="navbar-end max-sm:w-1/3 ml-2 md:ml-0">
       <ThemeController />
-      <button class="btn btn-sm text-lg btn-accent ml-4 max-md:hidden animate-bounce animate-twice">
+      <button class="btn text-lg btn-accent ml-4 max-md:hidden animate-bounce animate-twice">
         <Icon name="download" />
         Descargar CV</button>
     </div>
