--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -297,7 +297,7 @@ const categories = Array.from(new Set(TECH_STACK.map((item) => item.category)));
           <Icon name="projects" class="mr-2" />Proyectos como Freelancer
         </h2>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-6">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 mb-8">
           {
             projects.map((project) => (
               <Card
@@ -322,7 +322,7 @@ const categories = Array.from(new Set(TECH_STACK.map((item) => item.category)));
         <div class="col-span-full md:flex md:justify-center">
           <a
             href="/projects"
-            class="btn btn-outline btn-primary w-full md:w-auto"
+            class="btn btn-primary w-full md:w-auto"
           >
             <Icon name="more" class="inline-block ml-2" size={22} />
             Más proyectos
@@ -533,11 +533,11 @@ const categories = Array.from(new Set(TECH_STACK.map((item) => item.category)));
         </h2>
 
         <div class="flex flex-wrap gap-4 justify-between">
-          <label class="input input-primary input-bordered flex items-center gap-2 w-full md:w-2/3">
+          <label class="input input-primary input-bordered flex items-center gap-2 w-full md:w-[60%]">
             <Icon name="email" size={20} />
             palaciosluismig@gmial.com
           </label>
-          <div class="flex w-full gap-4 justify-between">
+          <div class="flex w-full md:w-[37%] gap-4 justify-between">
             <div class="w-1/2">
               <a href="/projects" class="btn btn-primary w-full">
                 <Icon name="send" class="inline-block ml-2" size={22} />
