--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import NavBar from "../components/NavBar.astro";
+import Footer from "../components/Footer.astro";
 import BaseHead  from "../components/BaseHead.astro";
 
 import { TRANSITION_API,SITE_TITLE, SITE_DESCRIPTION } from "../config";
@@ -33,5 +34,6 @@ const {
 			<slot />
 		</div>
 	</main>
+  <Footer></Footer>
   </body>
 </html>
