--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const projects = (await getCollection("projects"))
 ---
 
 <Layout urlMenuItem="/home">
-  <div class="flex justify-center flex-col px-5 pb-20 items-center">
+  <div class="flex justify-center flex-col px-5  items-center">
     <!-- Presentation -->
     <section class="max-w-screen-lg w-full my-10 flex flex-col gap-4 lg:grid lg:grid-cols-4 mb-16">
       <div
